fix: `Selections` arrow overlap borders in bordered tables

--- a/components/style/themes/compact.less
+++ b/components/style/themes/compact.less
@@ -223,6 +223,7 @@
 @table-padding-vertical-sm: 4px;
 @table-padding-horizontal-sm: 4px;
 @table-selection-column-width: 32px;
+@table-selections-column-width:  54px;
 
 // Statistic
 // ---
