--- a/components/style/themes/default.less
+++ b/components/style/themes/default.less
@@ -617,6 +617,7 @@
 @table-filter-dropdown-bg: @component-background;
 @table-expand-icon-bg: @component-background;
 @table-selection-column-width: 32px;
+@table-selections-column-width:  60px;
 // Sticky
 @table-sticky-scroll-bar-bg: fade(#000, 35%);
 @table-sticky-scroll-bar-radius: 4px;
